Update style.css Edit 7.1 (Project 2, Step 11). Fix text align.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 p{
-    text-wrap: pretty; align="center"
+    text-wrap: pretty; text-align:center
 }
